jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins
    version: "2.60.3"
